SigmaCodebackup3rdSep/objects/Proposal_Item__c.object
<CustomObject>
    <fields>
        <fullName>AdjustedLineItemTotal__c</fullName>
        <label>AdjustedLineItemTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>CPM Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM__c</fullName>
        <label>CPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charlie_Id__c</fullName>
        <label>Charlie Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Product Level Discount Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Product Level  Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Allocated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Allocated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipName>Proposal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount_Euro__c</fullName>
        <label>Location Level Discount Euro</label>
        <summarizedField>ProposalLineItemLocation__c.Location_Discount_Euro__c</summarizedField>
        <summaryForeignKey>ProposalLineItemLocation__c.Proposal_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location_Level_Discount__c</fullName>
        <label>Location Level Discount</label>
        <summarizedField>ProposalLineItemLocation__c.Location_Discount__c</summarizedField>
        <summaryForeignKey>ProposalLineItemLocation__c.Proposal_Line_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Digital_Media_Campaign_Account_Type__c</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Campaign_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Media_Cost_Euro__c</fullName>
        <label>Media Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Media_Cost__c</fullName>
        <label>Media Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Impression__c</fullName>
        <label>Monthly Impressions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Traffic__c</fullName>
        <label>Monthly Traffic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OtherCharges__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Other Charges Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Commission__c</fullName>
        <formula>Product__r.Commission__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Inventory Location</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipName>Campaign_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Proposal_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Cost_Euro__c</fullName>
        <label>Production Cost Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Cost__c</fullName>
        <label>Production Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Proposal Line Items</relationshipLabel>
        <relationshipName>Proposal_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Commission_Copy_Euro__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Sales Commission Copy Euro</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Commission_Copy__c</fullName>
        <label>Sales Commission Copy</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Commission_Euro__c</fullName>
        <formula>(Cost_Euro__c * Product_Commission__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Commission Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Commission__c</fullName>
        <formula>(Cost__c*Product__r.Commission__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sum_Location_Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Sum Location Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Proposal Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>